apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
      name: http
